# d4-rustclient

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: rust.yml
conf.sample/: uuid
d4message/: __init__.py
src/: lib.rs  main.rs
tests/: tests_python.py
