[package]
name = "d4-rustclient"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.9.5"
hmac = "0.11.0"
serde_bytes = "0.11.5"
clap = "2.33.3"
