[package]
name = "d4-rustclient"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
sha2 = "0.9.5"
hmac = "0.11.0"
clap = "2.33.3"
bincode = "1.3.3"

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]

[lib]
name = "d4message"
path = "src/lib.rs"
test = true
crate-type = ["cdylib", "rlib"]
