[tool.poetry]
name = "d4-rustclient"
version = "0.1"
description = "A D4 client with a rust backend"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"

packages = [{ include = "d4message" }]

[tool.poetry.scripts]
d4client-rust = "bin.d4client:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
setuptools-rust = "^0.12.1"
ipython = "^7.26.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry_core>=1.0", "setuptools", "wheel", "setuptools-rust"]
build-backend = "poetry.core.masonry.api"
